[package]
name = "ble-data-struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.4.1"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",

    "Storage_Streams",
    "Foundation",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation_Collections",
]