[package]
name = "ble-data-struct"
version = "0.2.0"
edition = "2021"
description = "BLE data struct for Rust"
authors = ["im97mori-github <github@im97mori.org>"]
homepage = "https://github.com/im97mori-github/ble-data-struct-rust"
repository = "https://github.com/im97mori-github/ble-data-struct-rust.git"
keywords = ["bluetooth", "ble"]
categories = ["data-structures", "parsing", "os::windows-apis"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.4.1"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Storage_Streams",
    "Foundation",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation_Collections",
]